@@ -12,6 +12,11 @@ What's new in Python 3.0b2?
 Core and Builtins
 -----------------
 
+- Issue #3280: like chr(), the "%c" format now accepts unicode code points
+  beyond the Basic Multilingual Plane (above 0xffff) on all configurations. On
+  "narrow Unicode" builds, the result is a string of 2 code units, forming a
+  UTF-16 surrogate pair.
+
 - Issue #3282: str.isprintable() should return False for undefined
   Unicode characters.
 
